src/snapshots/afrotd__parser__tests__rule_html_1.3.1.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            1.3.1 Spezifizierung
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Der Ball muss folgende Merkmale aufweisen:
            </p>
            <ol type="a">
                <li>neu oder nahezu neu (ein nahezu neuer Ball ist ein Ball,
                der sich nicht verändert hat und die Qualität und die
                Eigenschaften eines neuen Balles besitzt);
                </li>
                <li>die Hülle bestehend aus vier rauen Lederstücken, ohne
                Vertiefungen außer den Nähten;
                </li>
                <li>ein Satz von acht gleichmäßig verteilten Schnüren;
                </li>
                <li>natürliche braune Farbe;
                </li>
                <li>als offizieller Spielball vom AFVD Präsidium genehmigt
                (Weitere Regelungen ergeben sich aus der BSO bzw. den
                jeweiligen Spielordnungen der Länder.);
                </li>
                <li>übereinstimmend mit den Maßen des abgebildeten Diagramms;
                </li>
                <li>Längsumfang 70,5 - 72,5 cm
                </li>
                <li>Querumfang 52,7 - 54 cm
                </li>
                <li>Länge 27,5 - 29 cm
                </li>
                <li>aufgepumpt mit einem Druck von 0,86 - 0,93 bar;
                </li>
                <li>Gewicht 396,9 - 425,2 g (Ausnahme: Im Jugend- und
                Damenbereich kann der Ball leichter sein.);
                </li>
                <li>Der Ball darf nicht verändert worden sein. Das beinhaltet
                auch den Gebrauch von Substanzen oder mechanischen Geräten in
                den Teamzonen oder in der Nähe der Seitenlinien, durch die der
                Ball getrocknet oder erwärmt werden kann.
                </li>
                <li>Werbung auf dem Ball ist verboten (Ausnahmen: Name oder
                Markenzeichen der Herstellerfirma).
                </li>
            </ol>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.1.3.1"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
