src/snapshots/afrotd__parser__tests__rule_html_1.3.2.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            1.3.2 Aufsicht und Durchführung
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <ol type="a">
                <li>Die Schiedsrichter sollen vor und während des Spieles die
                Bälle testen und allein entscheiden, welche Bälle (nicht mehr
                als sechs Bälle pro Team) für das Spiel verwendet werden
                sollen. Die Schiedsrichter können zusätzliche Bälle zulassen,
                falls Umstände dies erforderlich machen.
                </li>
                <li>Das Heimteam ist für eine Ballpumpe und Messinstrumente
                verantwortlich.
                </li>
                <li>Das Heimteam ist für das Vorhandensein legaler Bälle
                verantwortlich und muss dem Gegner angeben, mit welchem Ball
                gespielt werden soll.
                </li>
                <li>Während des gesamten Spieles darf jedes Team, wenn es in
                Ballbesitz ist, einen neuen oder nahezu neuen Ball seiner Wahl
                benutzen, wenn der Ball den Regeln entspricht und vom Referee
                geprüft wurde.
                </li>
                <li>Das Gastteam ist verantwortlich für die Beschaffenheit von
                Bällen ihrer Wahl, wenn es in Ballbesitz ist und die vom
                Heimteam angebotenen Bälle nicht akzeptiert.
                </li>
                <li>Alle Bälle, die benutzt werden sollen, müssen dem Referee
                60 Minuten vor Spielbeginn zur Prüfung vorgelegt werden. Sobald
                die Teams den Schiedsrichtern ihre Spielbälle präsentiert
                haben, unterliegen diese der Aufsicht der Schiedsrichter
                während des Spieles.
                </li>
                <li>Wird der Ball in einer Seitenzone dead, zum Nachmessen in
                einer Seitenzone gebraucht, ist er unerreichbar oder wird er
                illegal, muss ein Ersatzball geholt werden (A.R. 1.3.2.I).
                </li>
                <li>Der Referee, der Center Judge oder der Umpire sollen
                feststellen, ob ein Ball den Regeln entspricht, bevor dieser
                gesnappt wird.
                </li>
                <li>Muss ein Ball gemessen werden, muss wie folgt verfahren
                werden:
                    <ol type="1">
                        <li>Alle Messungen sollen vorgenommen werden, nachdem
                        der Ball legal aufgepumpt wurde.
                        </li>
                        <li>Der Längsumfang muss um die Enden herum, jedoch
                        nicht über die Schnüre gemessen werden.
                        </li>
                        <li>Die Länge soll mit einem Zirkel gemessen werden,
                        von einem Ende zum anderen, jedoch nicht in den Kerben.
                        </li>
                        <li>Der Querumfang soll um den Ball herum, über das
                        Ventil, über eine Schnur, aber nicht über zwei sich
                        kreuzende Schnüre gemessen werden.
                        </li>
                    </ol>
                </li>
            </ol>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.1.3.2"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
