src/snapshots/afrotd__parser__tests__rule_html_1.3.3.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            1.3.3 Ballmarkierungen
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Markieren eines Balles, um dadurch einen Vorteil für einen
                Spieler oder eine Spielsituation zu erreichen, ist verboten.
            </p>
            <p>
                <strong>Strafe: Live Ball Foul. 15 Meter vom Previous Spot
                [S27].</strong>
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.1.3.3"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
