src/snapshots/afrotd__parser__tests__rule_html_1.4.1.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            1.4.1 Empfohlene Nummerierung
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Es wird dringend empfohlen, dass die Offense Spieler gemäß dem
                folgenden Diagramm nummeriert sind. Das Diagramm stellt nur
                eine der vielen möglichen Offense-Formationen dar:
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.1.4.1"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
