src/snapshots/afrotd__parser__tests__rule_html_1.4.13.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            1.4.13 Mikrofon des Referees
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <ol type="a">
                <li>Ein Mikrofon für den Referee für alle das Spiel
                betreffenden Bekanntmachungen wird dringend empfohlen. Wird dem
                Referee ein Mikrofon zur Verfügung gestellt, muss es ein
                Mikrofon sein, das am Kragen befestigt werden kann. Das
                Mikrofon muss vom Referee bedient und kontrolliert werden. Es
                muss, außer zu den Bekanntmachungen, ausgeschaltet sein. An
                anderen Schiedsrichtern sind Mikrofone verboten.
                </li>
                <li>Es ist eine gesicherte, drahtlose Sprechverbindung erlaubt,
                die nur für die Schiedsrichtercrew und den entsprechenden
                Observer zugänglich ist. Regel 2 Definitionen
                </li>
            </ol>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.1.4.13"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
