src/snapshots/afrotd__parser__tests__rule_html_1.4.2.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            1.4.2 Nummerierung der Spieler
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <ol type="a">
                <li>Alle Teammitglieder eines Teams müssen von 0 bis 99
                nummeriert sein. Jede Nummer, der eine Null voransteht (z.B.
                „00“ oder „07“) , ist illegal.
                </li>
                <li>Zwei Teammitglieder des gleichen Teams dürfen nicht die
                gleiche Nummer tragen.
                </li>
                <li>Markierungen in der Nähe der Nummern sind nicht erlaubt.
                Strafe (a-c): 5 Meter vom Previous Spot – Live Ball Foul [S23].
                </li>
                <li>Kommt ein Teammitglied ins Spiel, nachdem er seine
                Trikotnummer geändert hat oder kommt er mit einer anderen als
                der im Spielbericht vermerkten Trikotnummer ins Spiel, muss er
                sich sofort beim Referee melden, der wiederum den gegnerischen
                Head Coach informiert. Der Referee sagt die Änderung der
                Trikotnummer an und notiert diese Änderung später im
                Spielbericht. Ein Teammitglied, welches sich nach der Änderung
                seiner Trikotnummer nicht beim Referee meldet, wird mit einer
                Strafe für unsportliches Verhalten belegt [S27] (A.R. 1.4.2.I).
                Strafe (d): 15 Meter vom Previous Spot [S27]. Live Ball Foul.
                Unsportliches Verhalten. Verursacher eklatanter Verstöße müssen
                disqualifiziert werden [S47].
                </li>
            </ol>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.1.4.2"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
